syntax = "proto3";

package privy;

service PrivyService {
  rpc GetUserByAddr (GetUserByAddrReq) returns (GetUserRes);
  rpc GetUserByName (GetUserByNameReq) returns (GetUserRes);
  rpc InsertMessage (InsertMessageReq) returns (SuccessRes);
  rpc CreateUser (CreateOrUpdateUserReq) returns (SuccessRes);
  rpc UpdateUser (CreateOrUpdateUserReq) returns (SuccessRes);
  rpc DeleteUser (DeleteUserReq) returns (SuccessRes);
}

message GetUserByAddrReq {
  string user_addr = 1;
}

message GetUserByNameReq {
  string user_name = 1;
}

message GetUserRes {
  string user_addr = 1;
  string user_name = 2;
  string created_at = 3;
  string updated_at = 4;
}

message InsertMessageReq {
  string user_addr = 1;
  string message = 2;
}

message CreateOrUpdateUserReq {
  string user_addr = 1;
  string user_name = 2;
}

message DeleteUserReq {
  string user_addr = 1;
}

message SuccessRes {
  bool success = 1;
}